--- a/README
+++ b/README
@@ -14,3 +14,4 @@ Staff can also manually create an order from this page.
 Staff can view edit and delete any products via clicking on the products button on the left of the screen.
 Staff can also create an product from this page.
 
+![image](https://user-images.githubusercontent.com/44781092/72075219-37050280-32eb-11ea-8073-c3d3bd31881c.png)
