--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-** Github Prototype Page ** 
+Github Prototype Page
+
 This application can be used by both staff and customers.
 Pages are navigated to by clicking on the buttons on the navigation bar to the left of the screen. 
 
